# ot-harjoitustyo

./: .gitignore  .tiedosto.txt.swp  README.md  kolmas.txt  tiedosto.txt  toinen.txt
projekti/: .coveragerc  .pylintrc  pyproject.toml  tasks.py  tyoaikakirjanpito.md
projekti/coverage_html_report/: index.html  src_event_queue_py.html  src_file_loader_py.html  src_gameloop_py.html  src_leaderboard_uploader_py.html  src_main_py.html  src_rewards_py.html  src_snake_py.html  src_testit_eventq_test_py.html  src_testit_leaderboards_test_py.html  src_testit_snake_test_py.html  status.json
projekti/documentation/: Testausdokumentti.md  Vaatimusmaarittely.md  arkkitehtuuridokumentaatio.md  käyttöohde.md  tyoaikakirjanpito.md
projekti/htmlcov/: _home_visablad__cache_pypoetry_virtualenvs_snake-game-ot2021-1iqmEsUt-py3_8_lib_python3_8_site-packages__pytest___init___py.html  _home_visablad__cache_pypoetry_virtualenvs_snake-game-ot2021-1iqmEsUt-py3_8_lib_python3_8_site-packages__pytest__argcomplete_py.html  _home_visablad__cache_pypoetry_virtualenvs_snake-game-ot2021-1iqmEsUt-py3_8_lib_python3_8_site-packages__pytest__code___init___py.html  _home_visablad__cache_pypoetry_virtualenvs_snake-game-ot2021-1iqmEsUt-py3_8_lib_python3_8_site-packages__pytest__code_code_py.html  _home_visablad__cache_pypoetry_virtualenvs_snake-game-ot2021-1iqmEsUt-py3_8_lib_python3_8_site-packages__pytest__code_source_py.html  _home_visablad__cache_pypoetry_virtualenvs_snake-game-ot2021-1iqmEsUt-py3_8_lib_python3_8_site-packages__pytest__io___init___py.html  (+105 more)
projekti/src/: coin.py  draw_window.py  main.py  (+8 more)
(+31 files in other folders)
