[tool.poetry]
name = "maksukortti_test"
version = "0.01"
description = "testi"
authors = ["Visa Blad <visa.blad@helsinki.fi>"]
license = "free 4 warez"

[tool.poetry.dependencies]
python = "^3.6"
invoke = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
